<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@tools:sample/first_names">

    <!--now add some icons-->

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/khoanthu"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/txt_khoan_thu" />
        <item
            android:id="@+id/khoanchi"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/txt_khoan_chi" />
        <item
            android:id="@+id/thongke"
            android:icon="@drawable/ic_thong_ke_24dp"
            android:title="@string/txt_thong_ke" />
        />

    </group>

    <item android:title="@string/txt_ho_tro">

        <menu>
            <item
                android:id="@+id/gioithieu"
                android:icon="@drawable/ic_gioithieu"
                android:title="@string/txt_gioi_thieu" />
            <item
                android:id="@+id/doimatkhau"
                android:icon="@drawable/ic_key"
                android:title="@string/txt_doi_mat_khau" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/txt_logout" />
        </menu>

    </item>

</menu>