<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/d_20"
    android:layout_marginRight="@dimen/d_20"
    android:background="@drawable/background_dialog"
    android:orientation="vertical"
    android:padding="@dimen/d_10">

    <TextView
        android:id="@+id/titleThemKhoan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/txt_them_khoan_thu"
        android:textColor="@color/grey_dam"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/d_10">

        <EditText
            android:id="@+id/them_mota_gd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/d_15"
            android:background="@drawable/background_edttext"
            android:drawableEnd="@drawable/ic_mota"
            android:drawableRight="@drawable/ic_mota"
            android:drawableTint="@color/grey_dam"
            android:hint="@string/txt_mo_ta_giao_dich"
            android:padding="@dimen/d_12"
            android:paddingLeft="@dimen/d_10"
            android:paddingRight="@dimen/d_20"
            android:textColorHint="@color/grey_dam"
            android:textSize="16sp"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/them_ngay_gd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/background_edttext"
            android:drawableRight="@drawable/ic_date"
            android:drawableTint="@color/grey_dam"
            android:hint="@string/hint_ngay_giao_dich"
            android:padding="@dimen/d_12"
            android:paddingLeft="@dimen/d_10"
            android:paddingTop="@dimen/d_8"
            android:paddingRight="@dimen/d_20"
            android:paddingBottom="@dimen/d_8"
            android:textColor="#000000"
            android:textColorHint="@color/grey_dam"
            android:textSize="16sp" />

        <EditText

            android:id="@+id/them_tien_gd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_edttext"
            android:drawableRight="@drawable/ic_money"
            android:drawableTint="@color/grey_dam"
            android:hint="@string/hitn_so_tien"
            android:inputType="number"
            android:padding="@dimen/d_12"
            android:paddingLeft="@dimen/d_10"
            android:paddingTop="@dimen/d_8"
            android:paddingRight="@dimen/d_20"
            android:paddingBottom="@dimen/d_8"
            android:textColorHint="@color/grey_dam"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spLoaiGd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_10"
            android:layout_marginBottom="@dimen/d_30"
            android:orientation="horizontal">

            <Button
                android:id="@+id/xoaTextGD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/d_10"
                android:layout_weight="1"
                android:background="@drawable/bg_ui"
                android:text="@string/txt_huy"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btnThemGD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/d_10"
                android:layout_weight="1"
                android:background="@drawable/bg_ui"
                android:text="@string/txt_them"

                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>