<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/d_20"
    android:layout_marginRight="@dimen/d_20"
    android:background="@drawable/background_dialog"
    android:orientation="vertical"
    android:padding="@dimen/d_5">

    <TextView
        android:id="@+id/titleThemLoai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/d_10"
        android:text="@string/txt_them_loai_thu"
        android:textColor="@color/grey_dam"
        android:textSize="@dimen/d_25"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/d_30">

        <EditText

            android:id="@+id/them_loai_thu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d_10"
            android:layout_marginRight="@dimen/d_10"
            android:layout_marginBottom="12dp"
            android:background="@drawable/background_edttext"
            android:drawableRight="@drawable/ic_money"
            android:drawableTint="@color/grey_dam"
            android:hint="@string/hint_nhap_loai_chi"
            android:padding="@dimen/d_12"
            android:textColorHint="@color/grey_dam"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_30"
            android:orientation="horizontal">

            <Button
                android:id="@+id/xoaTextLT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/d_10"
                android:layout_marginRight="@dimen/d_10"
                android:layout_weight="1"
                android:background="@drawable/bg_ui"
                android:text="@string/txt_huy"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btnThemLT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/d_10"
                android:layout_marginRight="@dimen/d_10"
                android:layout_weight="1"
                android:background="@drawable/bg_ui"
                android:text="@string/txt_them"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>