<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/d_15">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_40"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/txt_thong_ke"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_30"
            android:orientation="vertical"
            android:weightSum="5">

            <TextView
                android:id="@+id/tungay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.3"
                android:background="@drawable/bg_ui"
                android:gravity="center_horizontal"
                android:padding="@dimen/d_10"
                android:text="@string/txt_chon_ngay_bat_dau"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/denngay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_10"
                android:background="@drawable/bg_ui"
                android:gravity="center_horizontal"
                android:padding="@dimen/d_10"
                android:text="@string/txt_chon_ngay_ket_thuc"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btnShow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/d_10"
                android:background="@drawable/bg_ui"
                android:padding="@dimen/d_12"
                android:text="@string/txt_ket_qua"
                android:textColor="#fff"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_30"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black"
                android:gravity="center_horizontal"
                android:padding="@dimen/d_12"
                android:text="@string/txt_tong_thu"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:layout_width="1.5dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tienThu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red"
                android:gravity="center_horizontal"
                android:padding="@dimen/d_12"
                android:text="@string/txt_so_tien"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_1"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/d_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black"
                android:gravity="center_horizontal"
                android:padding="@dimen/d_12"
                android:text="@string/txt_tong_chi"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:layout_width="1.5dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tienChi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red"
                android:gravity="center_horizontal"
                android:padding="@dimen/d_12"
                android:text="@string/txt_so_tien"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_1"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/d_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black"
                android:gravity="center_horizontal"
                android:padding="@dimen/d_12"
                android:text="@string/txt_con_lai"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:layout_width="1.5dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tienConLai"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red"
                android:gravity="center_horizontal"
                android:padding="12dp"
                android:text="@string/txt_so_tien"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>